--- a/QuanLyBanHang/App.Config
+++ b/QuanLyBanHang/App.Config
@@ -5,7 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/AppData.Model1.csdl|res://*/AppData.Model1.ssdl|res://*/AppData.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=E6420-PC\SQLEXPRES;initial catalog=QuanLyBanHang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/AppData.Model1.csdl|res://*/AppData.Model1.ssdl|res://*/AppData.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=E6420-PC\SQLEXPRES;initial catalog=QuanLyBanHang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="QuanLyBanHang.Properties.Settings.QuanLyBanHangConnectionString"
+      connectionString="Data Source=MAYTINH-TO4QHOV\SQLEXPRESS;Initial Catalog=QuanLyBanHang;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
