Action: code Load data frmNhanVien, Create frmThemHangHoaDichVu

--- a/QuanLyBanHang/App.Config
+++ b/QuanLyBanHang/App.Config
@@ -8,7 +8,7 @@
     <add name="QuanLyBanHangEntities" connectionString="metadata=res://*/AppData.Model1.csdl|res://*/AppData.Model1.ssdl|res://*/AppData.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=E6420-PC\SQLEXPRES;initial catalog=QuanLyBanHang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="QuanLyBanHang.Properties.Settings.QuanLyBanHangConnectionString"
-      connectionString="Data Source=MAYTINH-TO4QHOV\SQLEXPRESS;Initial Catalog=QuanLyBanHang;Integrated Security=True"
+      connectionString="Data Source=E6420-PC\SQLEXPRES;Initial Catalog=QuanLyBanHang;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
