Phan Quyen(chua hoan thanh)

--- a/QuanLyBanHang/QuanLyBanHang.csproj
+++ b/QuanLyBanHang/QuanLyBanHang.csproj
@@ -522,7 +522,6 @@
     <Compile Include="frmPhieuChi.Designer.cs">
       <DependentUpon>frmPhieuChi.cs</DependentUpon>
     </Compile>
-
     <Compile Include="frmSuaKhuVuc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -558,7 +557,7 @@
     </Compile>
     <Compile Include="frmThemKhuVuc.Designer.cs">
       <DependentUpon>frmThemKhuVuc.cs</DependentUpon>
-  </Compile>
+    </Compile>
     <Compile Include="frmPhucHoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -624,7 +623,6 @@
     </Compile>
     <Compile Include="frmThongTin.Designer.cs">
       <DependentUpon>frmThongTin.cs</DependentUpon>
-
     </Compile>
     <Compile Include="frmThongTinTroGiup.cs">
       <SubType>Form</SubType>
@@ -656,6 +654,7 @@
     <Compile Include="frmTyGia.Designer.cs">
       <DependentUpon>frmTyGia.cs</DependentUpon>
     </Compile>
+    <Compile Include="myobject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyBanHangDataSet.Designer.cs">
@@ -764,7 +763,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemKhuVuc.resx">
       <DependentUpon>frmThemKhuVuc.cs</DependentUpon>
-  </EmbeddedResource>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPhucHoi.resx">
       <DependentUpon>frmPhucHoi.cs</DependentUpon>
     </EmbeddedResource>
