--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -138,8 +138,10 @@
     <Compile Include="AppData\UNIT.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DepartmentDAO.cs" />
     <Compile Include="EmployeeDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XuLyChuoi.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
