--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DepartmentBUS.cs" />
     <Compile Include="EmployeeBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
