--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -141,6 +141,7 @@
     <Compile Include="DepartmentDAO.cs" />
     <Compile Include="EmployeeDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserDAO.cs" />
     <Compile Include="XuLyChuoi.cs" />
   </ItemGroup>
   <ItemGroup>
